refactor: 多级缓存工程化 + 商品/订单状态机 String 契约 + Admin Port 查询化 + 前端状态码迁移
## 框架缓存加固 (easyorange-framework)
- MultiLevelCache 重写：Config record 收敛伸缩构造器（强制 l1Ttl<=l2Ttl、negativeTtl<=l2Ttl 配平校验）；
  回源改 Caffeine get(key,fn) 原子单飞 + Redisson 分布式锁双检查（锁超时/异常 fail-open 保可用性）；
  NullValue 哨兵负缓存防缓存穿透（短 TTL）；新增 Micrometer 指标
  easyorange.cache.requests{result: l1_hit/l2_hit/l2_negative/load} + easyorange.cache.load 回源耗时 Timer
- LocalCacheConfig：失效消息分发改有界 ThreadPoolTaskExecutor（替代无界 SimpleAsyncTaskExecutor，
  线程前缀 cache-invalidation-）；全部 Bean 补 @ConditionalOnMissingBean 允许测试/子模块覆盖
- CacheProperties 新增 L2 配置段（expireMinutes=30 / negativeExpireSeconds=30）
- 移除 BloomFilter 全家桶：Guava 依赖、BloomFilterConfig、RedisBitmapBloomFilter/BloomFilter
  全部删除，ProductEventConsumer 不再维护布隆（并发量与缓存层已由单飞+负缓存覆盖）

## 商品状态机 String 契约 (easyorange-product)
- ProductStatus 按生命周期声明（DRAFT→PENDING_REVIEW→REJECTED→ONLINE→OFFLINE→SOLD），
  code 语义化（VARCHAR，非数字码），新增 isTerminal()（仅 SOLD）/ canRestoreStock() 不变量
- Product 聚合根收敛：transitionTo(target, action) 统一状态守卫（ALLOWED_TRANSITIONS 单一事实来源）；
  validateOnline()（isComplete+hasValidPrice+hasStock）统一守卫 approve/putOnline 两条上架路径；
  markAsSold() 改返回 Optional 支持幂等（订单完成链路重复触发忽略）；takeOffline(userId) 校验资产归属
- ProductAuditLog 实体 / CategoryDO / ProductDetailDO / HotKeywordDO / SearchHistoryDO 去手写样板
  （Lombok @Getter @Builder），引入 MapStruct（product pom + ProductAuditLogDataMapper）
- ProductCommandService：新增 mutateIfPresent 幂等落库，takeOffline 走归属校验

## 订单状态机收敛 (easyorange-order)
- Order 聚合根迁移 Lombok @Builder(toBuilder)+@Accessors(fluent)，注入 Clock 保证取消/退款时间可测试确定性；
  canPay/canShip/canConfirmReceipt/canRefund/canForceCancel 全部委托 OrderStatus.canTransitionTo() 单一事实来源
- OrderStatus 新增 canForceCancel（管理端强制取消路径），删除 OrderStatusException（统一 BizRequire+OrderResultCode）

## Admin 模块 Port 查询化 (easyorange-admin)
- 删除 BatchQueryUtil 批量查询直连 DAO，改 AdminUserQueryPort.getUserInfos / AdminProductQueryPort
  （getProductInfos+getProductImages）批量聚合；新增 AdminRatingQueryPort + AdminRatingQueryAdapter（application 装配）
- 引