@@ -1,18 +1,16 @@
 package com.cartethyia.easyorange.admin.service;
 
+import com.cartethyia.easyorange.admin.adapter.inbound.web.assembler.AdminProductAssembler;
+import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.request.AdminProductQueryRequest;
+import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.request.UpdateStatusRequest;
+import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.response.AdminProductResponse;
 import com.cartethyia.easyorange.admin.domain.port.AdminProductQueryPort;
 import com.cartethyia.easyorange.admin.domain.port.AdminProductQueryPort.ProductDetail;
 import com.cartethyia.easyorange.admin.domain.port.AdminProductQueryPort.ProductQueryCondition;
 import com.cartethyia.easyorange.admin.domain.port.AdminProductQueryPort.ProductQueryResult;
-import com.cartethyia.easyorange.admin.domain.port.AdminProductQueryPort.ProductSummary;
-import com.cartethyia.easyorange.common.constant.CommonConstant;
 import com.cartethyia.easyorange.common.event.DomainEventPublisher;
-import com.cartethyia.easyorange.common.event.Transition;
 import com.cartethyia.easyorange.common.exception.BusinessException;
 import com.cartethyia.easyorange.common.result.PageResult;
-import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.request.AdminProductQueryRequest;
-import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.request.UpdateStatusRequest;
-import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.response.AdminProductResponse;
 import com.cartethyia.easyorange.product.domain.aggregate.Product;
 import com.cartethyia.easyorange.product.domain.enums.ProductStatus;
 import com.cartethyia.easyorange.product.domain.port.ProductCacheEvictionPort;
@@ -24,36 +22,32 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class AdminProductService {
 
-    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern(CommonConstant.DATETIME_FORMAT);
-
     private final AdminProductQueryPort adminProductQueryPort;
     private final ProductRepository productRepository;
     private final ProductCacheEvictionPort productCachePort;
     private final DomainEventPublisher domainEventPublisher;
+    private final AdminProductAssembler adminProductAssembler;
 
+    @Transactional(readOnly = true)
     public PageResult<AdminProductResponse> listProducts(AdminProductQueryRequest request) {
-        LocalDateTime startTime = parseStartTime(request.startTime());
-        LocalDateTime endTime = parseEndTime(request.endTime());
-
         ProductQueryCondition condition = new ProductQueryCondition(
             request.keyword(),
             request.categoryId(),
             request.status(),
             request.sellerId(),
-            startTime,
-            endTime,
+            parseDate(request.startTime(), false),
+            parseDate(request.endTime(), true),
             request.pageNum(),
             request.pageSize()
         );
@@ -61,14 +55,14 @@ public class AdminProductService {
         ProductQueryResult result = adminProductQueryPort.queryProducts(condition);
 
         List<String> productIds = result.records().stream()
-            .map(ProductSummary::id)
-            .collect(Collectors.toList());
+            .map(AdminProductQueryPort.ProductSummary::id)
+            .toList();
 
         Map<String, List<String>> imagesMap = adminProductQueryPort.getProductImages(productIds);
 
         List<AdminProductResponse> records = result.records().stream()
-            .map(p -> toAdminProductResponse(p, imagesMap))
-            .collect(Collectors.toList());
+            .map(p -> adminProductAssembler.toSummaryResponse(p, imagesMap.getOrDefault(p.id(), List.of())))
+            .toList();
 
         return PageResult.of(records, result.total(), result.pageNum(), result.pageSize());
     }
@@ -80,30 +74,10 @@ public class AdminProductService {
             throw BusinessException.of("商品不存在");
         }
 
-        Map<String, List<String>> imagesMap = adminProductQueryPort.getProductImages(List.of(id));
-        List<String> images = imagesMap.getOrDefault(id, List.of());
-        String mainImage = images.isEmpty() ? null : images.get(0);
+        List<String> images = adminProductQueryPort.getProductImages(List.of(id))
+            .getOrDefault(id, List.of());
 
-        return AdminProductResponse.builder()
-            .productId(productDetail.id())
-            .name(productDetail.name())
-            .description(productDetail.description())
-            .price(productDetail.price())
-            .originalPrice(productDetail.originalPrice())
-            .stock(productDetail.stock())
-            .status(productDetail.status())
-            .statusDesc(productDetail.statusDesc())
-            .conditionLevel(productDetail.conditionLevel())
-            .location(productDetail.location())
-            .contactMethod(productDetail.contactMethod())
-            .images(images)
-            .mainImage(mainImage)
-            .categoryId(productDetail.categoryId())
-            .sellerId(productDetail.sellerId())
-            .viewCount(productDetail.viewCount())
-            .createTime(productDetail.createTime())
-            .updateTime(productDetail.updateTime())
-            .build();
+        return adminProductAssembler.toDetailResponse(productDetail, images);
     }
 
     @Transactional(rollbackFor = Exception.class)
@@ -116,80 +90,35 @@ public class AdminProductService {
         }
 
         Product product = productRepository.findById(ProductId.of(id))
-                .orElseThrow(() -> BusinessException.of("商品不存在"));
+            .orElseThrow(() -> BusinessException.of("商品不存在"));
 
         applyStatusTransition(product, newStatus);
         productCachePort.evictProductCache(id);
     }
 
     private void applyStatusTransition(Product product, ProductStatus newStatus) {
-        switch (newStatus) {
-            case ONLINE -> {
-                var t = product.putOnline();
-                productRepository.save(t.aggregate());
-                domainEventPublisher.publish(t.event());
-            }
-            case OFFLINE -> {
-                var t = product.takeOffline();
-                productRepository.save(t.aggregate());
-                domainEventPublisher.publish(t.event());
-            }
-            case SOLD -> {
-                var t = product.markAsSold();
-                productRepository.save(t.aggregate());
-                domainEventPublisher.publish(t.event());
-            }
-            default -> productRepository.save(
-                    product.toBuilder().status(newStatus).updateTime(LocalDateTime.now()).build());
+        var transition = switch (newStatus) {
+            case ONLINE -> product.putOnline();
+            case OFFLINE -> product.takeOffline();
+            case SOLD -> product.markAsSold().orElse(null);
+            default -> throw BusinessException.of("不支持将该商品状态改为: " + newStatus.getDesc());
+        };
+        if (transition != null) {
+            productRepository.save(transition.aggregate());
+            domainEventPublisher.publish(transition.event());
         }
     }
 
-    private LocalDateTime parseStartTime(String startTimeStr) {
-        if (!StringUtils.hasText(startTimeStr)) {
+    private LocalDateTime parseDate(String dateStr, boolean endOfDay) {
+        if (!StringUtils.hasText(dateStr)) {
             return null;
         }
         try {
-            return LocalDateTime.parse(startTimeStr + " 00:00:00", DATE_FORMATTER);
+            LocalDate date = LocalDate.parse(dateStr);
+            return endOfDay ? date.atTime(23, 59, 59) : date.atStartOfDay();
         } catch (DateTimeParseException e) {
-            log.warn("无法解析开始时间: {}, 格式应为 yyyy-MM-dd", startTimeStr);
+            log.warn("无法解析时间: {}, 格式应为 yyyy-MM-dd", dateStr);
             return null;
         }
-    }
-
-    private LocalDateTime parseEndTime(String endTimeStr) {
-        if (!StringUtils.hasText(endTimeStr)) {
-            return null;
-        }
-        try {
-            return LocalDateTime.parse(endTimeStr + " 23:59:59", DATE_FORMATTER);
-        } catch (DateTimeParseException e) {
-            log.warn("无法解析结束时间: {}, 格式应为 yyyy-MM-dd", endTimeStr);
-            return null;
-        }
-    }
-
-    private AdminProductResponse toAdminProductResponse(ProductSummary product, Map<String, List<String>> imagesMap) {
-        List<String> images = imagesMap.getOrDefault(product.id(), List.of());
-        String mainImage = images.isEmpty() ? null : images.get(0);
-
-        return AdminProductResponse.builder()
-            .productId(product.id())
-            .name(product.name())
-            .price(product.price())
-            .originalPrice(product.originalPrice())
-            .stock(product.stock())
-            .status(product.status())
-            .statusDesc(product.statusDesc())
-            .conditionLevel(product.conditionLevel())
-            .location(product.location())
-            .contactMethod(product.contactMethod())
-            .images(images)
-            .mainImage(mainImage)
-            .categoryId(product.categoryId())
-            .sellerId(product.sellerId())
-            .viewCount(product.viewCount())
-            .createTime(product.createTime())
-            .updateTime(product.updateTime())
-            .build();
     }
 }
